[gd_scene load_steps=8 format=3 uid="uid://klpwo846pij6"]

[ext_resource type="Script" path="res://menu.gd" id="1_rrtbo"]
[ext_resource type="Texture2D" uid="uid://cxbakr4vfxhbk" path="res://Assets/Sprites/FondoMenu.png" id="2_knlea"]
[ext_resource type="FontFile" uid="uid://ihk4kdacjiuj" path="res://Fonts/Kenney Blocks.ttf" id="4_6mnbp"]
[ext_resource type="Script" path="res://PLAY.gd" id="4_xo2w8"]
[ext_resource type="Script" path="res://OPTIONS.gd" id="5_xay75"]
[ext_resource type="Script" path="res://LANGUAGE.gd" id="6_clr5v"]
[ext_resource type="Script" path="res://EXIT.gd" id="7_ky626"]

[node name="Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_rrtbo")

[node name="FondoMenu" type="Sprite2D" parent="."]
position = Vector2(599, 289)
scale = Vector2(2.2875, 2.22176)
texture = ExtResource("2_knlea")

[node name="PLAY" type="Button" parent="."]
layout_mode = 0
offset_left = 674.0
offset_top = 45.0
offset_right = 923.0
offset_bottom = 178.0
theme_override_fonts/font = ExtResource("4_6mnbp")
theme_override_font_sizes/font_size = 50
text = "PLAY"
script = ExtResource("4_xo2w8")

[node name="OPTIONS" type="Button" parent="."]
offset_left = 757.0
offset_top = 201.0
offset_right = 1072.0
offset_bottom = 318.0
theme_override_fonts/font = ExtResource("4_6mnbp")
theme_override_font_sizes/font_size = 50
text = "OPTIONS"
script = ExtResource("5_xay75")

[node name="LANGUAGE" type="Button" parent="."]
offset_left = 424.0
offset_top = 351.0
offset_right = 769.0
offset_bottom = 482.0
theme_override_fonts/font = ExtResource("4_6mnbp")
theme_override_font_sizes/font_size = 50
text = "LANGUAGE"
script = ExtResource("6_clr5v")

[node name="EXIT" type="Button" parent="."]
offset_left = 797.0
offset_top = 484.0
offset_right = 1079.0
offset_bottom = 593.0
theme_override_fonts/font = ExtResource("4_6mnbp")
theme_override_font_sizes/font_size = 50
text = "EXIT
"
script = ExtResource("7_ky626")

[node name="CONTINUE" type="Button" parent="."]
offset_left = 791.0
offset_top = 344.0
offset_right = 1103.0
offset_bottom = 465.0
theme_override_fonts/font = ExtResource("4_6mnbp")
theme_override_font_sizes/font_size = 50
text = "LANGUAGE"
script = ExtResource("6_clr5v")

[connection signal="pressed" from="PLAY" to="." method="_on_play_pressed"]
[connection signal="pressed" from="OPTIONS" to="." method="_on_options_pressed"]
[connection signal="pressed" from="LANGUAGE" to="." method="_on_language_pressed"]
[connection signal="pressed" from="EXIT" to="." method="_on_exit_pressed"]
[connection signal="pressed" from="CONTINUE" to="." method="_on_language_pressed"]
[connection signal="pressed" from="CONTINUE" to="." method="_on_continue_pressed"]
